2008-11-03  Werner Koch  <wk@g10code.com>

	* mimemaker.c (do_mime_sign): Add arg SESSION_NUMBER and pass it
	to the sign operation.  Set session title.
	(mime_sign): Create a new session number.
	(mime_sign_encrypt): Pass a session number and title to the engine.
	(mime_encrypt): Ditto.
	* engine-assuan.c (op_assuan_encrypt, op_assuan_sign): Send
	session info.

2008-10-29  Werner Koch  <wk@g10code.com>

	* engine.c (engine_filter): Collect more data in the in buffer.
	* mimemaker.c (write_b64): Buffer up to 2k of output.

2008-10-27  Werner Koch  <wk@g10code.com>

	* mimemaker.c (mime_encrypt): Check for an empty message before
	creating the filter.  Return a suitable error code.
	(do_mime_sign): Ditto.
	(mime_sign_encrypt): Ditto.
	(mime_sign): Return an error code.
	* message.cpp (sign_encrypt): Show an error message for empty
	messages.
	(message_sign): Ditto.

	* olflange.cpp (install_forms): Add gpgol-cs.

	* mapihelp.cpp (get_internetcharsetbody_tag): New.
	(mapi_get_body_as_stream): Try the new tag first.
	(get_msgcls_from_pgp_lines): Ditto.  Remove the simple access
	method.

2008-10-24  Werner Koch  <wk@g10code.com>

	* mimeparser.c (struct mime_context): Add flag MAY_BE_OPAQUE_SIGNED.
	(t2body): Set that flag.
	(is_cms_signed_data): New.
	(mime_decrypt): Try to verify if the content is opaque signed
	without proper MIME headers.

2008-10-23  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_delete_gpgol_body_attachment): New.
	* message-events.cpp (OnWriteComplete): Remove a body attachment.

	* message.cpp (message_display_handler): Do not display PGP
	clearsigned messages.
	(message_display_handler): Do not update GpgOLStatus; it is not
	used anyway.
	(pgp_mime_from_clearsigned): Fix bogus trailing white space
	removal code.  Insert an empty line.
	* mimeparser.c (mime_verify): Add arg MIMEHACK.
	(message_verify): Use it.

2008-10-17  Werner Koch  <wk@g10code.com>

	* recipient-dialog.c (load_rsetbox): Remove superfluous check on